--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -81,11 +81,13 @@
 }
 
 .category-tag {
-    background-color: #ffeaa7;
-    color: #d35400;
+    background-color: #2c3e50;
+    color: #d4af37;
+    border: 1px solid #d4af37;
 }
 
 .area-tag {
-    background-color: #74b9ff;
-    color: #0984e3;
+    background-color: #34495e;
+    color: #ffffff;
+    border: 1px solid #7f8c8d;
 }
