--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -6,7 +6,7 @@
 
 .results-page h2 {
     text-align: center;
-    color: #1a1a1a;
+    color: #d1cccc;
     margin-bottom: 30px;
     font-weight: 700;
     font-size: 2rem;
